# guides

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: index.md
docs/azure/: 01_getting_started.md  02_contribution.md  pr_template.md
docs/modelling/business_intelligence/power_bi/: 01-power-bi.md
docs/modelling/credit_risk/data/: 01-data-sources.ipynb
docs/modelling/credit_risk/models/a-irb/: 002-irb-capital-modelling-20250603.ipynb
docs/modelling/credit_risk/models/climate/: 003-climate-risk-modelling-20250603.ipynb
docs/modelling/credit_risk/models/ifrs9/: extra-reading.ipynb  ifrs9_impairments.md
docs/modelling/fundamentals/01_software_engineering/: 01-coding-standards.md  02-markdown.md  03-python.ipynb  04-regex.md  05-jupyter.ipynb  06-repo-management.ipynb
docs/modelling/fundamentals/02_data_analysis/: 01-pandas.ipynb  02-polars.ipynb  03-visualisation.ipynb  04-skimpy.ipynb
docs/modelling/fundamentals/03_data_engineering/: 01-data.md  02-sql-intro.md  03-duckdb.md  04-sql-defintions.ipynb  05-sql-queries.ipynb  06-sql-manipulation.ipynb  07-normalisation.md  08-spark.md
docs/modelling/fundamentals/04_mathematics/: 01-linear-algebra.ipynb  02-differential-calculus.ipynb
docs/modelling/fundamentals/05_statistics/: 01-descriptive-statistics.ipynb  02-probability.ipynb  03-inferential-statistics.ipynb  04-model-classification.md  05-generalised-linear-models.ipynb  06-time-series.ipynb  07-survival-analysis.ipynb  09-bayesian-statistics.ipynb
docs/regulation/: basel.md  eba.md  ifrs9.md  pra.md
src/: config.py
(+24 files in other folders)
