[project]
name = "guide-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "duckdb-engine>=0.17.0",
    "eikon>=1.1.18",
    "faker>=37.4.2",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "lifelines>=0.30.0",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nelson-siegel-svensson>=0.5.0",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pandera>=0.25.0",
    "papermill>=2.6.0",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "psycopg>=3.2.9",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "skimpy>=0.0.18",
    "spacy>=3.8.7",
    "sqlparse>=0.5.3",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "nbqa>=1.9.1",
]

[tool.uv]
package = true